module 11 lesson 1 3ed; fixed reading catalog and files summing up with NIO Files.walkFileTree