@@ -1,9 +1,7 @@
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.nio.file.DirectoryStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
+import java.nio.file.attribute.BasicFileAttributes;
 
 public class FileUtils {
 
@@ -11,29 +9,36 @@ public class FileUtils {
 
     public static long calculateFolderSize(String path) {
 
-        Path folder = Paths.get(path);
-
-        System.out.println("\nСписок папок и файлов в папке " + path + " -\n");
-        recursionModule(folder);
-        return filesSumLength;
-    }
-
-    public static Path recursionModule(Path folder) {
         try {
-        DirectoryStream<Path> files = Files.newDirectoryStream(folder);
-            for (Path path : files) {
-                System.out.println(path);
-                filesSumLength += Files.size(Path.of(String.valueOf(path)));
-                if (Files.isDirectory(Path.of(String.valueOf(path)))) {
-                    folder = path;
-                    recursionModule(folder);
+            Files.walkFileTree(Paths.get(path), new FileVisitor<Path>() {
+                @Override
+                public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) {
+                    System.out.println("Папка - " + dir.toString());
+                    return FileVisitResult.CONTINUE;
                 }
-            }
+
+                @Override
+                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+                    System.out.println("Файл - " + file.toString());
+                    filesSumLength += Files.size(Path.of(String.valueOf(file)));
+                    return FileVisitResult.CONTINUE;
+                }
+
+                @Override
+                public FileVisitResult visitFileFailed(Path file, IOException exc) {
+                    return FileVisitResult.CONTINUE;
+                }
+
+                @Override
+                public FileVisitResult postVisitDirectory(Path dir, IOException exc) {
+                    return FileVisitResult.CONTINUE;
+                }
+            });
         } catch (FileNotFoundException e) {
             System.out.println("Message of Exception - " + e.getMessage());
         } catch (IOException e) {
             System.out.println("Message of Exception - " + e.getMessage());
         }
-        return folder;
+        return filesSumLength;
     }
 }
